[package]
name = "jit_liquidity_strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.0", features = ["ws", "openssl", "rustls", "legacy"] }
ethers-flashbots = "0.12.1"
ethers-providers = "2.0.0"
futures-util = "0.3.27"
serde = "1.0.155"
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["full"] }
eyre = "0.3"
anyhow = "1.0.70"
rand = "0.8.5"
rustc-hex = "2.1.0"
serde_json = "1.0.96"
ethereum_abi = "0.4.0"
primitive-types = "0.11.1"
ethers-contract = "2.0.3"
ethers-core = "2.0.3"
chrono = "0.4.24"
tiny_http = "0.12.0"
url = "2.3.1"
log = "0.4.17"

